--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                  initial-scale=1, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
+  <meta name="mobile-web-app-capable" content="yes" 
  
   <!-- Title -->
   <title>PWA Tutorial</title>
