--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes" 
  
   <!-- Title -->
-  <title>PWA Tutorial</title>
+  <title>GasCloud</title>
  
   <!-- Meta Tags required for
        Progressive Web App -->
