--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ shape. Furthermore, bold print stands out<strong>, </strong>and does    <em>not 
         try {
           await navigator
                 .serviceWorker
-                .register('serviceworker.js');
+                .register('/serviceworker.js');
         }
         catch (e) {
           console.log('SW registration failed');
