--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
   <!-- Manifest File link -->
   <link rel="manifest"
-        href="https://api.npoint.io/08af36ab95744bb5d5f4">
+        href="manifest.json">
 </head>
  
 <body>
@@ -411,7 +411,7 @@ shape. Furthermore, bold print stands out<strong>, </strong>and does    <em>not 
         try {
           await navigator
                 .serviceWorker
-                .register('/serviceworker.js');
+                .register('serviceworker.js');
         }
         catch (e) {
           console.log('SW registration failed');
