--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
  
   <!-- Responsive -->
@@ -191,6 +191,8 @@
         name="Picture 6"
         align="bottom"
         width="100%"
+        height="302"
+        border="2"
     />
 </h2>
 <h2>
