--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport"
         content="width=device-width,
-                 initial-scale=1, maximum-scale=1">
+                 initial-scale=1">
   <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
   <meta name="mobile-web-app-capable" content="yes" 
