--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <p>
     <img
         src="file:///tmp/lu7103yxylr8.tmp/lu7103yxyls3_tmp_ed27c67c06a7008a.png"
-        name="Picture 5"
+        alt="Picture 5"
         alt="Amend Default Styles"
         align="bottom"
         width="100%"
@@ -167,7 +167,7 @@
 <p>
     <img
         src="file:///tmp/lu7103yxylr8.tmp/lu7103yxyls3_tmp_9f46d5863ca282f0.png"
-        name="Picture 2"
+        alt="Picture 2"
         align="bottom"
         width="390"
         height="302"
@@ -188,7 +188,7 @@
 <h2>
     <img
         src="https://support.content.office.net/en-us/media/9767e455-f6fe-49c0-993a-1f974628c998.png"
-        name="Picture 6"
+        alt="Picture 6"
         align="bottom"
         width="100%"
         height="302"
