--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </h2>
 <p>
     <img
-        src="file:///tmp/lu7103yxylr8.tmp/lu7103yxyls3_tmp_ed27c67c06a7008a.png"
+        src="https://support.content.office.net/en-us/media/9767e455-f6fe-49c0-993a-1f974628c998.png"
         alt="Picture 5"
         alt="Amend Default Styles"
         align="bottom"
@@ -166,7 +166,7 @@
 </p>
 <p>
     <img
-        src="file:///tmp/lu7103yxylr8.tmp/lu7103yxyls3_tmp_9f46d5863ca282f0.png"
+        src="https://support.content.office.net/en-us/media/9767e455-f6fe-49c0-993a-1f974628c998.png"
         alt="Picture 2"
         align="bottom"
         width="390"
