--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         alt="Amend Default Styles"
         align="bottom"
         width="100%"
-        height="172"
+        height="262"
         border="2"
     />
 </p>
@@ -169,8 +169,8 @@
         src="https://support.content.office.net/en-us/media/9767e455-f6fe-49c0-993a-1f974628c998.png"
         alt="Picture 2"
         align="bottom"
-        width="390"
-        height="302"
+        width="100%"
+        height="100%"
         border="2"
     />
 </p>
