--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         alt="Amend Default Styles"
         align="bottom"
         width="100%"
-        height="262"
+        height="100%"
         border="2"
     />
 </p>
@@ -191,7 +191,7 @@
         alt="Picture 6"
         align="bottom"
         width="100%"
-        height="302"
+        height="100%"
         border="2"
     />
 </h2>
