--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
   <meta name="mobile-web-app-capable" content="yes" 
+  <link rel="apple-touch-icon" href="images/icon-192x192.png">
  
   <!-- Title -->
   <title>GasCloud</title>
