--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                  initial-scale=1">
   <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
+ <meta name="our PWA app for GasCloud">
   <meta name="mobile-web-app-capable" content="yes" 
   <link rel="apple-touch-icon" href="images/icon-192x192.png">
  
