--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="ie=edge">
  <meta name="our PWA app for GasCloud">
   <meta name="mobile-web-app-capable" content="yes" 
-  <link rel="apple-touch-icon" href="images/icon-192x192.png">
+  <link rel="apple-touch-icon" href="images/icon-180px.png">
  
   <!-- Title -->
   <title>GasCloud</title>
